[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "logistic-regression-for-binary-classification"
version = "0.1.0"
[tool.poetry.dependencies]
pandas = "^1.0"
python = "^3.7"
metrics = "^0.3.3"
sklearn = "^0.0.0"
seaborn = "^0.10.0"
[tool.poetry.dev-dependencies]
